--- a/src/main/webapp/resources/css/style.scss
+++ b/src/main/webapp/resources/css/style.scss
@@ -1,8 +1,8 @@
 html, body{
-  margin-left:15px; margin-right:15px;
+  margin-left:15px;
+  margin-right:15px;
   padding:0;
   font-family:Verdana, Arial, Helvetica, sans-serif;
-  text-align: center;
 }
 
 table {
@@ -61,8 +61,8 @@ tr:nth-child(odd) {
   #content {
     margin-top: 20px;
   }
-}
 
+}
 
 .add-button {
   border: 1px solid #666;
